--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.EcommerceApp"
         tools:targetApi="31">
         <activity
+            android:name=".FragmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".SliderActivity"
             android:exported="false" />
         <activity
